Annotation Spacing fixed with Filter container and Pagination container

--- a/src/app/components/annotation-viewer/annotation-viewer.component.scss
+++ b/src/app/components/annotation-viewer/annotation-viewer.component.scss
@@ -38,23 +38,25 @@
     z-index: 1000; 
 }
 
+
 .visualization-sidenav {
+    overflow: hidden !important;
 
     .body-container {
-        top: calc(#{$vis-title-expected-height} - 25px);
-        bottom: -35px;
         
+        top: calc(#{$vis-title-expected-height} - 25px);
+        height: calc(100% - 20px);
+
         &.with-filter {
             top: calc(#{$vis-title-expected-height} + 20px);
-            height: calc(100% - #{$vis-title-expected-height} + 20px);
+            height: calc(100% - #{$vis-title-expected-height} - 25px);
         }
 
         &.with-footer {
-            
-            height: calc(100% - #{$vis-title-expected-height} - 5px);
+            height: calc(100% - #{$footer-height} + 15px);
 
             &.with-filter {
-                height: calc(100% - #{$vis-title-expected-height} - 25px);
+                height: calc(100% - #{$vis-title-expected-height} - #{$footer-height} - 25px);
             }
         }
     }
